# UniPractice5GUI-GTKMM

./: CMakeLists.txt
data/: .users-info.txt.swp  .users-password.txt.swp  users-info.txt  users-password.txt
include/: .Course.hpp.swp  .LoginPage.hpp.swp  .UserDataManager.hpp.swp  .Window.hpp.swp  .all_include_files.hpp.swp  .testClass.hpp.swp  AnswerSheet.hpp  CMakeLists.txt  Course.hpp  Exception.hpp  LoginManager.hpp  UserDataManager.hpp  Util.hpp  all_include_files.hpp
include/Answer/: .BlankFillingAnswer.hpp.swp  Answer.hpp  BlankFillingAnswer.hpp  FourChoicesAnswer.hpp  TextualAnswer.hpp
include/Exam/: Exam.hpp  ExamAccess.hpp  ExamMasterAccess.hpp  ExamStudentAccess.hpp
include/GUI/: .FirstPage.hpp.swp  .Handler.hpp.swp  .MainWindow.hpp.swp  FirstPage.hpp  FirstPage_master.hpp  FirstPage_student.hpp  Handler.hpp  LoginPage.hpp  LoginPage2.hpp  MainWindow.hpp  testClass.hpp
include/Question/: .BlankFillingQuestion.hpp.swp  BlankFillingQuestion.hpp  FourChoicesQuestion.hpp  Question.hpp  TextualQuestion.hpp
include/User/: Master.hpp  Student.hpp  User.hpp  UserSerializer.hpp
src/: .Course.cpp.swp  .UserDataManager.cpp.swp  .Window.cpp.swp  .testClass.cpp.swp  AnswerSheet.cpp  Course.cpp  LoginManager.cpp  UserDataManager.cpp  Util.cpp  main.cpp
src/Answer/: BlankFillingAnswer.cpp  FourChoicesAnswer.cpp  TextualAnswer.cpp
src/Exam/: Exam.cpp  ExamAccess.cpp  ExamMasterAccess.cpp  ExamStudentAccess.cpp
src/GUI/: .AddExamPage.cpp.swp  .FirstPage.cpp.swp  .LoginPage.cpp.swp  .MainWindow.cpp.swm  .MainWindow.cpp.swn  .MainWindow.cpp.swo  .MainWindow.cpp.swp  AddExamPage.cpp  FirstPage.cpp  FirstPage_master.cpp  Handler.cpp  LoginPage.cpp  LoginPage2.cpp  MainWindow.cpp  RegisterStudentPage.cpp  Window2.cpp  testClass.cpp
src/Question/: BlankFillingQuestion.cpp  (+3 more)
(+4 files in other folders)
